--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,3 +1,7 @@
+#yes, #no  {
+  font-size: 28px;
+  font-family: Helvetica 'Times New Roman' sans-serif;
+}
 #yes {
   background-color: black;
   color: white;
@@ -5,8 +9,4 @@
 }
 #no {
   background-color: yellow;
-}
-.both {
-  font-size: 28px;
-  font-family: Helvetica 'Times New Roman' sans-serif;
 }
