--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,36 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 10px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 20px;
+  font-weight: 20px;
+  font-size: large;
+  margin-bottom: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 20px;
+  margin-bottom: 10px;
+  font-weight: 20px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 20px;
+  font-weight: 20px;
+  display: block;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
-}
+  display: block;
+  margin: 0 auto;
+  padding: 5px 20px;
+} 
